# asl-detection-csci4900

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: ASL_Evaluation.ipynb
src/: train_asl.py
